# a3md

./: README.md  setup.cfg
a3mdnet/: __init__.py  data.py  density_models.py  functionals.py  functions.py  graph.py  input.py  modules.py  norm.py  sampling.py  utils.py
a3mdnet/models/: ddnn.py
a3mdnet/params/: a3md_anisotropic_basis.json  a3md_isotropic_basis.json  a3md_promolecule.json  lebedev_011.txt  lebedev_017.txt  lebedev_027.txt  lebedev_053.txt  lebedev_101.txt  vanDerWaals_coefficients.json  wfn_symmetry_index.json
a3mdnet/protocols/: ddnn_zoo.py  train.py
a3mdnet/protocols/sdnn/: sdnn_zoo.py  train.py
test/: data_loading_test.py  density_check.py  gen_amd_test.py  rdkit_integration_test.py  utils_dxgrid.py  utils_toxyz.py
