[metadata]
name = a3mdnet
version = 0.0.1
author = Bruno Cuevas
author_email = brunocuevaszuviria@gmail.com
description = Neural network based prediction of the electron density
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    Pint
    rdkit-pypi
    torch
    h5py
    mendeleev==0.6.0
    click

include_package_data = True

[options.package_data]
    * = *.json
    a3mdnet = params/*.json, params/*.txt

[options.entry_points]
console_scripts =
    a3md_train = a3mdnet.protocols.train:cli
